Android offline | Notes | Notes pop-up is not vertically center aligned - fixed

--- a/www/css/dialogueprompt.css
+++ b/www/css/dialogueprompt.css
@@ -152,7 +152,7 @@
           filter: alpha(opacity=50);
           opacity: .5;
         }
-		body #commentModal  .commentmodal-dialog { margin: 50% auto; top: -60px; }
+		body #commentModal  .commentmodal-dialog {margin: -50px 0 0 -150px; top: 50%; position: fixed; left: 50%;}
 		.commentSavebtn span, .commentCancelbtn span {padding: 8px 55px;
 		display: inline-block;}
     }
